Fix the header background scrolling on iOS

--- a/style/1092636.css
+++ b/style/1092636.css
@@ -82,6 +82,8 @@ h1 {
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
+	/* This will fix the fixed scrolling on iOS5+ */
+	background-attachment: fixed;
 }
 
 #headerphoto {
@@ -91,7 +93,6 @@ h1 {
 	-webkit-border-radius: 150px;
 	-moz-border-radius: 150px;
 	background: url(../images/reinier.png) no-repeat;
-	
 }
 
 #hobbies {
